tests/NormalTests/paczka1/fuzzy1/46395290.err
Error in line 6: S106S1062,1
Error in line 3: TqPfW A135 92,4
Error in line 11: FnRt47KC S106 52,^
Error in line 7: TqPfW S106 46,0
Error in line 2: S106 S106 21,5
Error in line 13: TqPfW A587 75,4
Error in line 17: TqPfW A135 11,2
Error in line 15: S106 A135 71,6
Error in line 32: yg3GJ0Dk0v A135 0,1
